--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Simple Note App created with React JS"
     />
-    <title>React Note APP</title>
+    <title>React App-note</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app. Activer votre JavaScript pour acceder à l'Application</noscript>
